--- a/projeto/index.html
+++ b/projeto/index.html
@@ -29,14 +29,18 @@
             <form id="calc_form">
                 <label for="v_inicial"> Valor Investido (R$): </label> <br> <input type="number" id="v_inicial">
                 <br>
-                <label for="v_mensal">Valor mensal (R$): </label> <br> <input type="number" id="v_mensal">
+                <label for="v_mensal"> Valor mensal (R$): </label> <br> <input type="number" id="v_mensal">
                 <br>
-                <label for="cdi_porcent" >Insira o percentual sobre o CDI (DI): </label> <br> <input type="number" id="cdi_porcent">
+                <label for="cdi_porcent"> Insira o percentual sobre o CDI (DI): </label> <br> <input type="number" id="cdi_porcent">
                 <br>
                 <label for="prazo"> Prazo (MESES): </label> <br> <input type="number" id="prazo">
                 <br>
-                <input type="button" value="Calcular">
+                <input type="button" value="Calcular" onclick="Update_data()">
+                
+                <span id="tes">Teste</span>
             </form>
+
+            
         </section>
     </main>
     <footer>
