--- a/projeto/index.html
+++ b/projeto/index.html
@@ -31,20 +31,18 @@
                 <br>
                 <label for="v_mensal"> Valor mensal (R$): </label> <br> <input type="number" id="v_mensal">
                 <br>
-                <label for="cdi_porcent"> Insira o percentual sobre o CDI (DI): </label> <br> <input type="number" id="cdi_porcent">
+                <label for="cdi_porcent"> Insira o percentual sobre o CDI (DI): </label> <br> <input type="number" id="cdi_porcent" value="100">
                 <br>
                 <label for="prazo"> Prazo (MESES): </label> <br> <input type="number" id="prazo">
                 <br>
                 <input type="button" value="Calcular" onclick="Update_data()">
-                
-                <span id="tes">Teste</span>
             </form>
 
             
         </section>
     </main>
     <footer>
-        <script src="js/script.js"></script>
+        <script src="js/calculator.js"></script>
     </footer>
 </body>
 </html>
