--- a/projeto/index.html
+++ b/projeto/index.html
@@ -40,7 +40,7 @@
         </section>
 
         <section id="show">
-            <div id="show_res">
+            <div id="show_res" class="">
                 <p class="res p"> Valor depositado:</p><span class="res" id="depositado_HTML"> 0 </span> <br>
                 <p class="res p"> Juros SEM IRRF: </p><span class="res" id="juros_HTML">0 </span> <br>
                 <p class="res p"> Total: </p><span class="res" id="total_HTML">0 </span> <br>
